--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
   :root {
     --background: 233, 15%, 12%;
@@ -66,8 +65,13 @@
   }
 }
 
+html,
+body {
+  background-color: #1a1b23 !important;
+}
+/* 
 @layer base {
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
